--- a/app/src/main/res/layout/activity_text_switcher.xml
+++ b/app/src/main/res/layout/activity_text_switcher.xml
@@ -3,11 +3,20 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         >
 
     <TextSwitcher
-            android:layout_width="wrap_content"
+            android:id="@+id/textSwitcher_ts"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            />
+
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/textSwitcher_btn_start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="StarT"
             />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
